--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -29,3 +29,6 @@ jobs:
   
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@v4
+      with:
+          branch: gh-pages # The branch the action should deploy to.
+          folder: build # The folder the action should deploy.
