--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -44,4 +44,4 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: dist # The folder the action should deploy.
+          folder: src # The folder the action should deploy.
