--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -47,4 +47,4 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: src # The folder the action should deploy.
+          folder: / # The folder the action should deploy.
