--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -34,5 +34,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: / # The folder the action should deploy.
+          folder: ./ # The folder the action should deploy.
           exclude: .github
